<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">



        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/Request1" />

        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/Notifications1" />
        <item
            android:id="@+id/navigation_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/Events1" />

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/Profile1" />

    </menu>
