<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@android:color/white"
            app:title="@string/Request"
            app:titleTextColor="@color/colorPrimary" />
    <ProgressBar
        android:id="@+id/progressBarpost"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="10dp"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_red_dark"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_below="@+id/progressBarpost"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <ToggleButton

        android:id="@+id/toggleButton"
        android:layout_gravity="center"

        android:layout_width="290dp"
        android:layout_marginTop="15dp"
        android:textOn="@string/Me"

        android:textOff="@string/Others"
        android:layout_marginBottom="10dp"
        android:layout_height="70dp"
        android:text="ToggleButton" />
    <com.google.android.material.card.MaterialCardView
        android:layout_height="wrap_content"
        android:id="@+id/othersll1"

        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="320dp"
        app:cardElevation="4dp"

        android:layout_centerInParent="true"

        android:layout_marginBottom="8dp"

        android:clickable="true"
        android:focusable="true"
        android:checkable="true">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/othersll"
        android:padding="5dp"
        android:visibility="visible"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/detailsfill"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"

            android:layout_height="30dp"/>

        <com.google.android.material.textfield.TextInputLayout

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="280dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/colorPrimary"

            app:hintTextColor="@color/colorPrimary"

            app:counterTextColor="@color/colorPrimary"


            android:layout_height="wrap_content"

            android:hint="@string/Timelimit">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:id="@+id/timelimit"
                android:inputType="number"
                android:layout_marginTop="7dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/colorPrimary"

            app:hintTextColor="@color/colorPrimary"
            app:counterTextColor="@color/colorPrimary"


            android:layout_height="wrap_content"

            android:hint="@string/Required_units">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:id="@+id/units"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="280dp"
            android:id="@+id/Namepostlayout"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/colorPrimary"

            app:hintTextColor="@color/colorPrimary"
            app:counterTextColor="@color/colorPrimary"
            android:layout_marginTop="10dp"


            android:layout_height="wrap_content"

            android:hint="@string/Name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/Namepost"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/colorPrimary"

            app:hintTextColor="@color/colorPrimary"
            app:counterTextColor="@color/colorPrimary"


            android:layout_height="wrap_content"
            android:id="@+id/Agepostlayput"

            android:hint="@string/Age">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="number"
                android:id="@+id/Agepost"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="280dp"
            android:id="@+id/Bloodgrppost"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/Blood_group">

            <AutoCompleteTextView

                android:layout_width="match_parent"
                android:id="@+id/ddown"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/string_Address"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"

            android:layout_width="280dp"
            android:layout_gravity="center"
            android:layout_height="60dp">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Available"/>
            <RadioButton

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Other"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationpost"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="281dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"

            android:hint="@string/string_Address">

            <AutoCompleteTextView

                android:id="@+id/locddown"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="280dp"
            android:id="@+id/tlayoutaddress"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/colorPrimary"
            android:visibility="gone"

            app:hintTextColor="@color/colorPrimary"
            app:counterTextColor="@color/colorPrimary"



            android:layout_height="wrap_content"

            android:hint="@string/string_Address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/Addressmanual"


                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/post"
            android:backgroundTint="@color/colorPrimary"
            android:theme="@style/Theme.MaterialComponents"
            android:layout_width="280dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"

            android:layout_height="60dp"
            android:text="@string/Post"
            />








    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/deletepost"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@+id/post"
        android:theme="@style/Theme.MaterialComponents"
        android:layout_width="280dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"

        android:layout_height="60dp"

        android:text="@string/Delete"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
    </LinearLayout>

</ScrollView>





</RelativeLayout>