<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarprofilepage"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="@android:color/white"
        app:title="@string/Profile"


        app:titleTextColor="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/topAppBarprofilepage"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/topAppBarprofilepage"

            android:layout_height="match_parent">




    <com.google.android.material.card.MaterialCardView
        android:layout_width="340dp"
        app:cardElevation="4dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_centerInParent="true"
        android:layout_height="750dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="#d3d3d3"
                android:layout_height="138dp">
            <ImageView
                android:layout_width="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_account_circle_black_24dp"
                android:layout_height="130dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="3dp"/>
            </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="280dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/colorPrimary"

            app:hintTextColor="@color/colorPrimary"

            app:counterTextColor="@color/colorPrimary"


            android:layout_height="wrap_content"

            android:hint="@string/Name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:id="@+id/prname"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"

                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="280dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/colorPrimary"

            app:hintTextColor="@color/colorPrimary"

            app:counterTextColor="@color/colorPrimary"


            android:layout_height="wrap_content"

            android:hint="@string/Age">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:id="@+id/prnumber"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"

                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="280dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:boxStrokeColor="@color/colorPrimary"

                app:hintTextColor="@color/colorPrimary"

                app:counterTextColor="@color/colorPrimary"


                android:layout_height="wrap_content"

                android:hint="@string/Blood_group">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"

                    android:id="@+id/prblood"

                    android:layout_marginTop="10dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="280dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:boxStrokeColor="@color/colorPrimary"

                app:hintTextColor="@color/colorPrimary"

                app:counterTextColor="@color/colorPrimary"


                android:layout_height="wrap_content"

                android:hint="@string/Number">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"

                    android:id="@+id/donnum"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"




                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="280dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:boxStrokeColor="@color/colorPrimary"

                app:hintTextColor="@color/colorPrimary"

                app:counterTextColor="@color/colorPrimary"


                android:layout_height="wrap_content"

                android:hint="@string/Email_Address">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"

                    android:id="@+id/ea"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"

                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="280dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:boxStrokeColor="@color/colorPrimary"

                app:hintTextColor="@color/colorPrimary"

                app:counterTextColor="@color/colorPrimary"


                android:layout_height="wrap_content"

                android:hint="@string/string_Address">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"

                    android:id="@+id/a"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"

                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout

                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="280dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:boxStrokeColor="@color/colorPrimary"

                app:hintTextColor="@color/colorPrimary"

                app:counterTextColor="@color/colorPrimary"


                android:layout_height="wrap_content"

                android:hint="@string/count">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"

                    android:id="@+id/doncount"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"

                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="80dp"
                    android:padding="16dp"
                    android:text="@string/smspermission"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/fback41"
                    android:layout_width="340dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="70dp"
                    android:text="@string/fback" />
                <Button
                    android:id="@+id/aboutpagebutton"
                    android:layout_width="340dp"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="70dp"
                    android:text="@string/AD" />

                <Button
                    android:layout_width="340dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/chlang"
                    android:layout_alignParentBottom="true"
                    android:text="@string/clanguagebutton"
                    android:layout_centerHorizontal="true"
                    android:layout_height="70dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>